# scisw_learning

./: .gitignore  CHANGELOG.md  README.md  run_ipynb.py
.github/workflows/: test_notebooks.yml
python/: 01_Python_Fundamentals.ipynb  02_Python_Fundamentals_2.ipynb  03_Python_Fundamentals_3.ipynb  04_Libraries.ipynb  05_Classes.ipynb  06_Packaging.ipynb  README.md  example_module.py  requirements.txt  script_to_profile.py
python/refproj/: .readthedocs.yml  CHANGELOG.md  mkdocs.yml  pyproject.toml
python/refproj/.github/workflows/: actions.yaml
python/refproj/docs/: api.md  index.md
python/refproj/src/refproj/: __init__.py  cli.py  gui.py  logging.py
python/refproj/tests/: test_cli.py  test_docs.py  test_examples.py
python/static/02/: example_text.txt  mat_from_python.mat  polars.csv
rustpython/: 01_Packaging.ipynb  README.md
rustpython/refproj/: Cargo.toml  README.md  pyproject.toml
rustpython/refproj/.cargo/: config.toml
rustpython/refproj/src/: lib.rs  python.rs  rust.rs
rustpython/refproj/src/refproj/: __init__.py  refproj.pyi
