[project]
name = "refproj"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Logan", email = "jlogan@cfs.energy" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "click>=8.2.1",
    "dash>=3.1.1",
    "numpy>=2.2.6",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "ruff==0.12.2",
    "pyright==1.1.402",
    "mktestdocs==0.2.4",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
refproj = "refproj.cli:cli"

[tool.pytest.ini_options]
addopts = "--cov=refproj --cov-report html --cov-fail-under=50"

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]