[project]
name = "refproj"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Logan", email = "jlogan@cfs.energy" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "click~=8.3.1",
    "dash~=4.0.0",
    "numpy>=1.21.2",
    "rich~=14.3.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
    "ty==0.0.23",
    "mktestdocs==0.2.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
refproj = "refproj.cli:cli"

[tool.pytest.ini_options]
addopts = "--cov=refproj --cov-report html --cov-fail-under=50"

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
]