[package]
name = "refproj"
version = "0.1.0"
edition = "2024"

[lib]
name = "refproj"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = { version = "0.25.0", optional = true }
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py39"], optional = true }
rayon = "1.10.0"

[features]
python = ["numpy", "pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
#overflow-checks = true

[profile.dev]
# Nearly full optimizations for debug builds to test for perf regressions
# when using maturin develop
opt-level = 3
lto = true
codegen-units = 1