[package]
name = "refproj"
version = "0.2.0"
edition = "2024"

[lib]
name = "refproj"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = { version = "0.28.0", optional = true }
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py39"], optional = true }
rayon = "1.11.0"

[features]
default = ["python"]
python = ["numpy", "pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true

[profile.dev]
opt-level = 2
lto = false
codegen-units = 16